Implement basic join and leave, no data distribution yet